--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
  <h2> SALVE PORRA </h2>
+
+<a href="/usuario/listaUsuarios"> Lista de Colecionadores </a>
+<br>
+<a href="/figurinha/listaFigurinhas"> Lista de Figurinhas </a>
+<br>
+<a href="/contato/listaContatos"> Lista de Contatos </a>
+<br>
+<a href="/pontotroca/listaPontoTrocas"> Lista de Pontos de Trocas </a>
+<br>
+
 </body>
 </html>
