--- a/src/main/resources/templates/contato/listaContatos.html
+++ b/src/main/resources/templates/contato/listaContatos.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contatos</title>
 </head>
 <body>
-$END$
+
+<p>Tabela Contatos</p>
+<table>
+    <thead>
+    <tr>
+        <th th:text="Id"></th>
+        <th th:text="Nome"></th>
+        <th>Deletar</th>
+        <th>Atualizar</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="contato: ${contatos}">
+        <td th:text="${contato.id}"></td>
+        <td th:text="${contato.contato}"></td>
+        <td><a th:href="@{/contato/removeContato/{id}(id=${contato.id})}">Deletar</a></td>
+    </tr>
+    </tbody>
+</table>
+
+<br><br>
+
+<a href="/">Menu</a><br>
+<a href="/contato/showForm">Adicionar novo Contato</a>
+
+
 </body>
 </html>
