TODO: marcar presença através do select

--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -12,7 +12,7 @@
 <form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
     <p>Nome: <input type="text" th:field="*{nome}" placeholder="Insira seu nome" /></p>
     <p>Sobrenome: <input type="text" th:field="*{sobrenome}" placeholder="Insira seu sobrenome" /></p>
-    <p>Sobrenome: <input type="text" th:field="*{email}" placeholder="Insira seu email" /></p>
+    <p>Email: <input type="text" th:field="*{email}" placeholder="Insira seu email" /></p>
     <p><input type="submit" value="Adicionar" /></p>
 </form>
 <br><br>
