--- a/src/main/resources/templates/usuario/listaUsuarios.html
+++ b/src/main/resources/templates/usuario/listaUsuarios.html
@@ -16,7 +16,7 @@
         <th th:text="Id"></th>
         <th th:text="Nome"></th>
         <th>Deletar</th>
-        <th>Atualizar</th>
+        <th>Perfil</th>
     </tr>
     </thead>
     <tbody>
@@ -24,6 +24,7 @@
         <td th:text="${usuario.id}"></td>
         <td th:text="${usuario.nome}"></td>
         <td><a th:href="@{/usuario/removeUsuario/{id}(id=${usuario.id})}">Deletar</a></td>
+        <td><a th:href="@{/usuario/getUsuarioById/{id}(id=${usuario.id})}">Perfil</a></td>
     </tr>
     </tbody>
 </table>
