--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -9,17 +9,18 @@
 </head>
 
 <body>
-
-<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
-    <p>Nome: <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/></p>
-    <p>Sobrenome: <input type="text" th:field="*{sobrenome}" placeholder="Insira seu sobrenome" /></p>
-    <p>Email: <input type="text" th:field="*{email}" placeholder="Insira seu email" /></p>
-    <p>Senha: <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/></p>
-    <p><input type="submit" value="Adicionar" /></p>
-</form>
-<br><br>
-
-<a href="/usuario/listaUsuarios">Ver lista de colecionadores</a>
-
+	<div id="feedback-form">
+		<h2 class="header">Troquinhas</h2>
+		<div>
+			<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
+			    <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/>
+			    <input type="text" th:field="*{sobrenome}" placeholder="Insira seu sobrenome" />
+			    <input type="text" th:field="*{email}" placeholder="Insira seu email" />
+			    <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/>
+			    <button type="submit">Registrar</button>
+			    <!-- <a href="/usuario/listaUsuarios">Ver lista de colecionadores</a> -->
+			</form>
+	</div>
+	</div>
 </body>
 </html>
