--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,6 +1,6 @@
 #feedback-form {
   width: 280px;
-  margin: auto;
+  margin: 100px auto;
   background-color: #fcfcfc;
   padding: 20px 50px 40px;
   box-shadow: 1px 4px 10px 1px #aaa;
