--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div id="feedback-form">
-		<h2 class="header">Troquinhas</h2>
+		<h2 class="header" style="color:#16747e">TROQUINHAS</h2>
 		<div>
 			<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
 			    <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/>
@@ -18,7 +18,7 @@
 			    <input type="text" th:field="*{email}" placeholder="Insira seu email" />
 			    <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/>
 			    <button type="submit">Registrar</button>
-			    <!-- <a href="/usuario/listaUsuarios">Ver lista de colecionadores</a> -->
+			    <a href="/usuario/listaUsuarios" class="comment-link">Ver lista de colecionadores</a>
 			</form>
 	</div>
 	</div>
