--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,36 +1,27 @@
-#feedback-form {
+.feedback-form {
   width: 280px;
   margin: 100px auto;
   background-color: #fcfcfc;
   padding: 20px 50px 40px;
   box-shadow: 1px 4px 10px 1px #aaa;
-  font-family: sans-serif;
+  font-family: Helvetica, sans-serif;
   border-radius: 10%;
 }
 
-#feedback-form * {
+.feedback-form * {
     box-sizing: border-box;
 }
 
-#feedback-form h2{
+.feedback-form h2{
   text-align: center;
   margin-bottom: 30px;
 }
 
-#feedback-form input {
+.feedback-form input {
   margin-bottom: 15px;
 }
 
-#feedback-form input[type=text] {
-  display: block;
-  height: 32px;
-  padding: 6px 16px;
-  width: 100%;
-  border: none;
-  background-color: #f3f3f3;
-}
-
-#feedback-form input[type=password] {
+.feedback-form input {
   display: block;
   height: 32px;
   padding: 6px 16px;
@@ -50,26 +41,26 @@
   text-decoration: none;
 }
 
-#feedback-form label {
+.feedback-form label {
   color: #777;
   font-size: 0.8em;
 }
 
-#feedback-form input[type=checkbox] {
+.feedback-form input[type=checkbox] {
   float: left;
 }
 
-#feedback-form input:not(:checked) + #feedback-phone {
+.feedback-form input:not(:checked) + #feedback-phone {
   height: 0;
   padding-top: 0;
   padding-bottom: 0;
 }
 
-#feedback-form #feedback-phone {
+.feedback-form .feedback-phone {
   transition: .3s;
 }
 
-#feedback-form button[type=submit] {
+.feedback-form button[type=submit] {
   display: block;
   margin: 20px auto 0;
   width: 150px;
@@ -87,7 +78,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
 }
 
-#feedback-form button[type=submit]:hover {
+.feedback-form button[type=submit]:hover {
   display: block;
   margin: 20px auto 0;
   width: 150px;
