--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-	<div id="feedback-form">
+	<div class="feedback-form">
 		<h2 class="header" style="color:#16747e">TROQUINHAS</h2>
 		<div>
 			<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
 			    <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/>
 			    <input type="text" th:field="*{sobrenome}" placeholder="Insira seu sobrenome" />
-			    <input type="text" th:field="*{email}" placeholder="Insira seu email" />
+			    <input type="email" th:field="*{email}" placeholder="Insira seu email" required/>
 			    <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/>
 			    <button type="submit">Registrar</button>
 			    <a href="/usuario/listaUsuarios" class="comment-link">Ver lista de colecionadores</a>
