troca id por class

--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -17,7 +17,7 @@
 			    <input type="text" th:field="*{sobrenome}" placeholder="Insira seu sobrenome" />
 			    <input type="email" th:field="*{email}" placeholder="Insira seu email" required/>
 			    <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/>
-			    <button type="submit">Registrar</button>
+			    <button type="submit" class="confirma-btn">Registrar</button>
 			    <a href="/usuario/listaUsuarios" class="comment-link">Ver lista de colecionadores</a>
 			</form>
 	</div>
