--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,8 @@
+p {
+  font-family: Helvetica, sans-serif;
+  font-size: 15px;
+}
+
 .feedback-form {
   width: 280px;
   margin: 100px auto;
@@ -60,7 +65,7 @@
   transition: .3s;
 }
 
-.feedback-form button[type=submit] {
+.confirma-btn {
   display: block;
   margin: 20px auto 0;
   width: 150px;
@@ -78,7 +83,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
 }
 
-.feedback-form button[type=submit]:hover {
+.confirma-btn:hover {
   display: block;
   margin: 20px auto 0;
   width: 150px;
