--- a/src/main/resources/templates/usuario/paginaUsuario.html
+++ b/src/main/resources/templates/usuario/paginaUsuario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../static/css/main.css">
     <title>Usuário</title>
 </head>
 <body>
@@ -65,7 +66,7 @@
                     th:text="${pontoTroca.nome}"
                     th:value="${pontoTroca.id}">
         </select></p>
-    <p><input type="submit" value="Adicionar" /></p>
+    <p><input type="submit" value="Adicionar"/></p>
 </form>
 
 </body>
