--- a/src/main/resources/templates/contato/formContato.html
+++ b/src/main/resources/templates/contato/formContato.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../../static/css/main.css">
     <title>Title</title>
 </head>
 <body>
