--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -10,7 +10,7 @@
 
 <body>
 	<div class="feedback-form">
-		<h2 class="header" style="color:#16747e">TROQUINHAS</h2>
+		<h2 class="header" style="color:#006400">TROQUINHAS</h2>
 		<div>
 			<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
 			    <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/>
