--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -18,7 +18,7 @@
 			    <input type="email" th:field="*{email}" placeholder="Insira seu email" required/>
 			    <input type="password" th:field="*{senha}" placeholder="Insira sua senha" required/>
 			    <button type="submit" class="confirma-btn">Registrar</button>
-			    <a href="/usuario/listaUsuarios" class="comment-link">Ver lista de colecionadores</a>
+			    <a href="/usuario/listaUsuarios" class="comment-link" style="font-weight:lighter">Ver lista de colecionadores</a>
 			</form>
 	</div>
 	</div>
