--- a/src/main/resources/templates/usuario/paginaUsuario.html
+++ b/src/main/resources/templates/usuario/paginaUsuario.html
@@ -66,7 +66,7 @@
                     th:text="${pontoTroca.nome}"
                     th:value="${pontoTroca.id}">
         </select></p>
-    <p><input type="submit" value="Adicionar"/></p>
+        <button type="submit" class="secundario-btn">Adicionar</button>
 </form>
 
 </body>
