--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -120,3 +120,37 @@ a:hover {
   background: linear-gradient(to right, #fff700 0%, #72ce27 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
 }
+
+.secundario-btn {
+  display: block;
+  width: 150px;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
+  color: #eee;
+  font-weight: 700;
+  box-shadow: 1px 4px 10px 1px #aaa;
+  
+  background: #0d7503; /* Old browsers */
+  background: -moz-linear-gradient(left, #ffdf00 0%, #0d7503 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #ffdf00 0%, #0d7503 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #ffdf00 0%, #0d7503 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
+}
+
+.secundario-btn:hover {
+  display: block;
+  width: 150px;
+  height: 40px;
+  border-radius: 25px;
+  border: none;
+  color: #eee;
+  font-weight: 700;
+  box-shadow: 1px 4px 10px 1px #aaa;
+  
+  background: #0d7503; /* Old browsers */
+  background: -moz-linear-gradient(left, #fff700 0%, #72ce27 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #fff700 0%, #72ce27 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #fff700 0%, #72ce27 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207cca', endColorstr='#9f58a3',GradientType=1 ); /* IE6-9 */
+}
