--- a/src/main/resources/templates/feed/feed.html
+++ b/src/main/resources/templates/feed/feed.html
@@ -5,49 +5,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../static/css/main.css">
+  <link th:href="@{/css/main.css}" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <title>Feed</title>
 </head>
 <body>
-
-<p>Feed</p>
-<br>
-Natal Shopping
-<table>
-  <thead>
-  <tr>
-    <th th:text="Nome"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="colecionador: ${listaColecionadores1}">
-    <td th:text="${colecionador.nome}"></td>
-    <td th:text="${colecionador.pontoTroca.id}"></td>
-  </tr>
-  </tbody>
-</table>
-
-Partage Norte Shopping
-<table>
-  <thead>
-  <tr>
-    <th th:text="Nome"></th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="colecionador: ${listaColecionadores2}">
-    <td th:text="${colecionador.nome}"></td>
-    <td th:text="${colecionador.pontoTroca.id}"></td>
-  </tr>
-  </tbody>
-</table>
-
-
-
-<br><br>
-
-<a href="/">Menu</a><br>
-
-
+<div th:replace="fragments/header :: header">...</div>
+<div class="content">
+  <h2 class="title">Feed</h2>
+  <br>
+  <p>Natal Shopping</p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th th:text="Nome"></th>
+      <th th:text="Detalhes"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="colecionador: ${listaColecionadores1}">
+      <td th:text="${colecionador.nome}"></td>
+      <td><a th:href="@{/usuario/getUsuarioById/{id}(id=${colecionador.id})}">Ver figurinhas</a></td>
+    </tr>
+    </tbody>
+  </table>
+  <br><br>
+  <p>Norte Shopping</p>
+  <table class="table">
+    <thead>
+    <tr>
+      <th th:text="Nome"></th>
+      <th th:text="Detalhes"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="colecionador: ${listaColecionadores2}">
+      <td th:text="${colecionador.nome}"></td>
+      <td><a th:href="@{/usuario/getUsuarioById/{id}(id=${colecionador.id})}">Ver figurinhas</a></td>
+    </tr>
+    </tbody>
+  </table>
+  <br><br>
+  <a href="/">Menu</a><br>
+</div>
 </body>
 </html>
