--- a/src/main/resources/templates/figurinha/formFigurinha.html
+++ b/src/main/resources/templates/figurinha/formFigurinha.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../static/css/main.css">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link th:href="@{/css/main.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <title>Formulário Figurinha</title>
 </head>
-<body>
 
+<body>
+<div class="feedback-form">
+    <h1 class="header" style="color:#006400">TROQUINHAS</h1>
+    <div>
+        <form action="#" th:action="@{/figurinha/addFigurinha}" th:object="${figurinha}" method="post">
+            <input type="text" th:field="*{nome}" placeholder="Insira o nome" required/>
+            <input type="text" th:field="*{raridade}" placeholder="Insira a raridade" />
+            <button type="submit" class="confirma-btn">Registrar</button>
+            <a href="/figurinha/listaFigurinha" class="comment-link" style="font-weight:lighter">Ver lista de figurinhas</a>
+        </form>
+    </div>
+</div>
 </body>
 </html>
