--- a/src/main/resources/templates/figurinha/listaFigurinhas.html
+++ b/src/main/resources/templates/figurinha/listaFigurinhas.html
@@ -5,35 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/main.css">
+    <link th:href="@{/css/main.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Figurinhas</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header">...</div>
+<div class="content">
+    <h2>Tabela Figurinhas</h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th th:text="Id"></th>
+            <th th:text="Nome"></th>
+            <th>Deletar</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="figurinha: ${figurinhas}">
+            <td th:text="${figurinha.id}"></td>
+            <td th:text="${figurinha.nome}"></td>
+            <td><a th:href="@{/figurinha/removeFigurinha/{id}(id=${figurinha.id})}">Deletar</a></td>
+        </tr>
+        </tbody>
+    </table>
 
-<p>Tabela Figurinhas</p>
-<table>
-    <thead>
-    <tr>
-        <th th:text="Id"></th>
-        <th th:text="Nome"></th>
-        <th>Deletar</th>
-        <th>Atualizar</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="figurinha: ${figurinhas}">
-        <td th:text="${figurinha.id}"></td>
-        <td th:text="${figurinha.nome}"></td>
-        <td><a th:href="@{/figurinha/removeFigurinha/{id}(id=${figurinha.id})}">Deletar</a></td>
-    </tr>
-    </tbody>
-</table>
+    <br><br>
 
-<br><br>
-
-<a href="/">Menu</a><br>
-<a href="/figurinha/showForm">Adicionar nova Figurinha</a>
-
-
+    <a href="/">Menu</a><br>
+    <a href="/figurinha/showForm">Adicionar</a>
+</div>
 </body>
 </html>
