--- a/src/main/resources/templates/figurinha/paginaFigurinha.html
+++ b/src/main/resources/templates/figurinha/paginaFigurinha.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../static/css/main.css">
+    <link th:href="@{/css/main.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
-
+<div th:replace="fragments/header :: header">...</div>
+<div class="content">
+</div>
 </body>
 </html>
