--- a/src/main/resources/templates/usuario/formUsuario.html
+++ b/src/main/resources/templates/usuario/formUsuario.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/main.css">
+	<link th:href="@{/css/main.css}" rel="stylesheet" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Formulário Colecionador</title>
 </head>
 
 <body>
 	<div class="feedback-form">
-		<h2 class="header" style="color:#006400">TROQUINHAS</h2>
+		<h1 class="header" style="color:#006400">TROQUINHAS</h1>
 		<div>
 			<form action="#" th:action="@{/usuario/addUsuario}" th:object="${colecionador}" method="post">
 			    <input type="text" th:field="*{nome}" placeholder="Insira seu nome" required/>
