--- a/src/main/resources/templates/usuario/listaUsuarios.html
+++ b/src/main/resources/templates/usuario/listaUsuarios.html
@@ -5,36 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../static/css/main.css">
+    <link th:href="@{/css/main.css}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Colecionadores</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header">...</div>
+<div class="content">
+    <h2>Tabela Colecionadores</h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th th:text="Id"></th>
+            <th th:text="Nome"></th>
+            <th>Deletar</th>
+            <th>Perfil</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="usuario: ${listaUsuarios}">
+            <td th:text="${usuario.id}"></td>
+            <td th:text="${usuario.nome}"></td>
+            <td><a th:href="@{/usuario/removeUsuario/{id}(id=${usuario.id})}">Deletar</a></td>
+            <td><a th:href="@{/usuario/getUsuarioById/{id}(id=${usuario.id})}">Perfil</a></td>
+        </tr>
+        </tbody>
+    </table>
 
-<p>Tabela Colecionadores</p>
-<table>
-    <thead>
-    <tr>
-        <th th:text="Id"></th>
-        <th th:text="Nome"></th>
-        <th>Deletar</th>
-        <th>Perfil</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="usuario: ${listaUsuarios}">
-        <td th:text="${usuario.id}"></td>
-        <td th:text="${usuario.nome}"></td>
-        <td><a th:href="@{/usuario/removeUsuario/{id}(id=${usuario.id})}">Deletar</a></td>
-        <td><a th:href="@{/usuario/getUsuarioById/{id}(id=${usuario.id})}">Perfil</a></td>
-    </tr>
-    </tbody>
-</table>
+    <br><br>
 
-<br><br>
-
-<a href="/">Menu</a><br>
-<a href="/usuario/showForm">Adicionar novo usuário</a>
-
-
+    <a href="/">Menu</a><br>
+    <a href="/usuario/showForm">Adicionar</a>
+</div>
 </body>
 </html>
