Início de remodelação do css da aplicação

--- a/src/main/resources/templates/figurinha/listaFigurinhas.html
+++ b/src/main/resources/templates/figurinha/listaFigurinhas.html
@@ -35,5 +35,8 @@
     <a href="/">Menu</a><br>
     <a href="/figurinha/showForm">Adicionar</a>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
