--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <link th:href="@{/css/main.css}" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Footer</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">...</div>
-<div class="content">
-</div>
+<footer class="py-5 bg-dark">
+    <div class="container px-5"><p class="m-0 text-center" style="color:#72ce27">Copyright &copy; Troquinhas 2022</p></div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="js/scripts.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
