--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,32 +8,33 @@
 </head>
 <body>
 <header class="site-header">
-    <nav class="navbar navbar-expand-lg navbar-success bg-success">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container px-5">
+            <a class="navbar-brand" href="/">Troquinhas</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-between w-100">
-                    <li>
-                        <a class="navbar-brand active" th:href="@{/feed/show}">Troquinhas</a>
-                    </li>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/usuario/listaUsuarios">Colecionadores</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/figurinha/listaFigurinhas">Figurinhas</a></li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" th:href="@{/usuario/listaUsuarios}">Colecionadores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/figurinha/listaFigurinhas}">Figurinha</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/pontotroca/listaPontoTrocas}">Pontos de Troca</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/contato/listaContatos}">Contatos</a>
+                        <div class="dropdown">
+                            <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Outros
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="/pontotroca/listaPontoTrocas">Pontos de Troca</a></li>
+                                <li><a class="dropdown-item" href="/contato/listaContatos">Contatos</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
