--- a/src/main/resources/templates/ponto-troca/listaPontoTrocas.html
+++ b/src/main/resources/templates/ponto-troca/listaPontoTrocas.html
@@ -30,11 +30,13 @@
         </tr>
         </tbody>
     </table>
-
     <br><br>
-
     <a href="/">Menu</a><br>
     <a href="/pontotroca/showForm">Adicionar novo Ponto de Troca</a>
 </div>
+<div th:replace="fragments/footer :: footer">...</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
